Fixed bug 'overflow-x: hidden'

--- a/style/pixelbite.css
+++ b/style/pixelbite.css
@@ -18,6 +18,7 @@
     max-width: 100%;
     position: relative;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 *:focus {
